# mantua

./: .gitignore  CLAUDE.md  README.md  next.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json  velite.config.ts
.github/workflows/: ci.yml  nightly.yml
app/: globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
app/[slug]/: page.tsx
app/notes/: page.tsx
app/notes/[slug]/: opengraph-image.tsx  page.tsx
app/tags/: page.tsx
app/tags/[tag]/: page.tsx
components/: mdx.tsx  note-list.tsx  site-nav.tsx
components/figures/: adaptation-decision-tree.tsx  data-readiness-spectrum.tsx
content/index/: home.mdx
content/notes/: llm-customization-and-fine-tuning-notes.mdx  model-distillation.mdx  private-deployment.mdx  serving-slms-on-a-desktop-gpu.mdx  slm-evaluation-harness.mdx  small-language-models.mdx  tabular-foundation-models-notes.mdx
data/: corpus.txt  eval.jsonl  preferences.jsonl  sft.jsonl
lib/: content.ts  site.ts  wikilinks.ts
src/mantua/: __init__.py  _local.py  caching.py  cli.py  config.py  configs.py  experiments.py  pipeline.py  stages.py  training.py
src/mantua/registry/: __init__.py  blobstore.py  lineage.py
tasks/: 2026-07-14-citation-support.md  2026-07-14-design-overhaul.md  2026-07-14-review-domain-adaptation-evidence.md  README.md
tests/: conftest.py  test_nightly.py  test_pipeline.py
