[project]
name = "mantua"
version = "0.0.1"
description = "Model Training as Code — a model factory implementing the LLM training pipeline as version-controlled code."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prefect>=3.0",
    "pydantic>=2.7",
    "fsspec>=2024.6",
    "torch>=2.2",
    "transformers>=4.44",
    "tokenizers>=0.19",
]

# Full training/eval stack for real (non-downscaled) recipes. The tiny
# end-to-end run does NOT import these, so the core install stays lean and CI
# stays fast. Install with: uv sync --extra recipes
[project.optional-dependencies]
recipes = [
    "trl>=0.9",
    "accelerate>=0.33",
    "datasets>=2.20",
    "lm-eval>=0.4",
]

[project.scripts]
mantua = "mantua.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pyright>=1.1.375",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mantua"]

# Pull the CPU-only torch build on Linux CI (the default PyPI wheel drags in
# ~800MB of CUDA deps we don't need on a single-box reference target). macOS
# falls back to PyPI, whose arm64 wheels are already CPU-only.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["nightly: larger end-to-end run asserting an eval threshold"]
